# Glowing-Waddle

./: .gitignore  README.md  meson.build
builds/: .ninja_deps  .ninja_log  breakout  build.ninja  compile_commands.json
builds/meson-logs/: meson-log.txt
builds/meson-private/: coredata.dat.prev
src/: GenericVector.h  geometry.c  geometry.h  logging.h  main.c  program.h  renderer.c  renderer.h  scene.c  scene.h  shader_programs.h  shader_tools.c  shader_tools.h  vertex_types.c  vertex_types.h
